fix notification badge placement on small screen

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -109,6 +109,11 @@
     right: 1.1em;
     align-items: center;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-smallest) {
+      top: 0.2rem;
+      right: 0.8em;
+    }
   }
 
   &__user-photo {
